--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html>
+<!--ICS20-Unit1-03-HTML-hello_world -->
+<html lang="en-ca"
   <head>
-    <title>Page Title</title>
+    <meta charset="utf-8">
+    <meta name="description" content="My First Webpage, with proper style">
+    <meta name="keywords" content="mths, ics2o">
+    <meta name="author" content="Rahul Sanjeev">
+    <meta name="viewport" content="width-device-width, initial-scale=1.0">
+    <title>My First Webpage, with proper style</title>
   </head>
-
-  <body>
-    <h1>Hello, World!</h1>
-  </body>
-  
-</html>
+  <style>
+    #my-header {
+      background-color: rgb(265, rgba(0, 128, 34, 0.38), blue);
+    }
