--- a/index.html
+++ b/index.html
@@ -12,4 +12,17 @@
   <style>
     #my-header {
       background-color: rgb(265, rgba(0, 128, 34, 0.38), blue);
+      color: hsl(0, 72%, 57%);
+      padding: 50px;
+      text-align: center;
     }
+  </style>
+  <body style="background-color: darkred;">
+    <h1 id="my-header">Style is important</h1>
+    <p style="background-color: #ff00ff;">Proper HTML style is important</p>
+    <img src="./images/HTML-style-guide.jpeg" alt="style">
+    <p>
+      <a href="./cities.html">My cities page</a>
+    </p>
+  </body>
+</html>
