--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!--ICS20-Unit1-03-HTML-hello_world -->
-<html lang="en-ca"
+<html lang="en-ca">
   <head>
     <meta charset="utf-8">
     <meta name="description" content="My First Webpage, with proper style">
