--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   </head>
   <style>
     #my-header {
-      background-color: rgb(265, rgba(0, 128, 34, 0.38), blue);
-      color: hsl(0, 72%, 57%);
-      padding: 50px;
+      background-color: rgb(255, 125, 0);
+      color: hsl(147, 50%, 47%);
+      padding: 40px;
       text-align: center;
     }
   </style>
-  <body style="background-color: darkred;">
+  <body style="background-color:powderblue;">
     <h1 id="my-header">Style is important</h1>
     <p style="background-color: #ff00ff;">Proper HTML style is important</p>
     <img src="./images/HTML-style-guide.jpeg" alt="style">
