--- a/cities.html
+++ b/cities.html
@@ -29,7 +29,7 @@
 
   <body style="background-color: chocolate;">
     <!--An element with a unique id-->
-    <h1 id="myHeader">capital-cities</h1>
+    <h1 id="myHeader">Capital Cities</h1>
 
     <!-- Multiple elements with the same class -->
     <h2 class="city">Antananarivo</h2>
