--- a/cities.html
+++ b/cities.html
@@ -12,7 +12,7 @@
 
   <style>
     /* Style the element with the id "myHeader" */
-    #myHeader {
+    #my-header {
         background-color: crimson;
         color: mintcream;
         padding: 40px;
@@ -29,7 +29,7 @@
 
   <body style="background-color: chocolate;">
     <!--An element with a unique id-->
-    <h1 id="myHeader">Capital Cities</h1>
+    <h1 id="my-header">Capital Cities</h1>
 
     <!-- Multiple elements with the same class -->
     <h2 class="city">Antananarivo</h2>
