--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <p style="background-color: #ff00ff;">Proper HTML style is important</p>
     <img src="./images/HTML-style-guide.jpeg" alt="style">
     <p>
-      <a href="./cities.html">My cities page</a>
+      <a href="cities.html">My cities page</a>
     </p>
   </body>
 </html>
