--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Rahul Sanjeev">
     <meta name="viewport" content="width-device-width, initial-scale=1.0">
     <title>My First Webpage, with proper style</title>
+    <link rel="stylesheet" href="./css/style.css">
   </head>
 
   <body style="background-color:powderblue;">
