--- a/cities.html
+++ b/cities.html
@@ -13,7 +13,7 @@
 
   <body style="background-color: chocolate;">
     <!--An element with a unique id-->
-    <h1 id="my-header">Capital Cities</h1>
+    <h1 id="my-Header">Capital Cities</h1>
 
     <!-- Multiple elements with the same class -->
     <h2 class="city">Antananarivo</h2>
