Unit 1-04 extra edits

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <img src="./images/HTML-style-guide.jpeg" alt="style">
     <p>
       <a href="cities.html">My cities page</a>
+      <a href="index2.html">Table and list page</a>
     </p>
   </body>
 </html>
